# triple-space

./: .gitignore  README.md  pyproject.toml
agent/: client.py  icon.py  listener.py  loading.py  main.py  test.sh
agent/native/: __init__.py  notification.py
agent/native/macos/: clipboards.py  notification.py  simulator.py
agent/native/test/: test_clipboard.py  test_listener.py  test_simulator.py
agent/native/windows/: clipboards.py  notification.py  simulator.py  win_clip_api.py  win_notify_api.py
server/: ai.py  json_utils.py  server.py
server/benchmark/: caculate_translation_accuracy.py
server/benchmark/assets/: prompt_injection_mixed_zh_en.tsv
server/llms/: polish_v1.py  translate_v1.py  translate_v2.py
